--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
@@ -272,13 +272,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/inigo-35-35.jpg">
+                      <img src="../../images-patternlab/josh-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Danish danish candy canes bonbon cheesecake danish marzipan</a></div>
+                    <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Inigo Montoya</strong> | November 19 at 11:55pm
+                      Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
                     </div>
                   </div>
                 </div>
@@ -287,13 +287,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/daenerys-35-35.jpg">
+                      <img src="../../images-patternlab/mulder-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
+                    <div class="view__title"><a href="#">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
+                      Posted by <strong>Fox Mulder</strong> | March 22 at 4:45pm
                     </div>
                   </div>
                 </div>
@@ -302,13 +302,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/buttercup-35-35.jpg">
+                      <img src="../../images-patternlab/watson-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
+                    <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
+                      Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
                     </div>
                   </div>
                 </div>
