--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
@@ -628,15 +628,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/buttercup-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/inigo-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">Princess Buttercup</a>  
+                    <a href="#">Inigo Montoya</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    You cannot track that, not with a thousand bloodhounds, and you cannot break it, not with a thousand swords.
+                    Hello. My name is Inigo Montoya. You killed my father. Prepare to die.
                   </div>
                 </div>
             </article>
