[#4119] Styling updates for header for welcome pages

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.html
@@ -55,9 +55,9 @@
     <div class="skiplinks">
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
-<header class="header-simple" role="banner">
+<header class="header" role="banner">
   <div class="layout-constrain">
-    <span class="site-name site-name--simple">
+    <span class="site-name">
       <a class="site-name__link" href="#" rel="home">
         <h1 class="site-name__text">Global Innovation Exchange</h1>
       </a>
@@ -83,7 +83,7 @@
 	<script>
 		// handle injection of items from PHP
 		var patternPartial = "organisms-header-simple";
-		var lineage        = [{"lineagePattern":"atoms-site-name-simple","lineagePath":"..\/..\/patterns\/00-atoms-10-page-elements-01-site-name-simple\/00-atoms-10-page-elements-01-site-name-simple.html","lineageState":"inprogress"},{"lineagePattern":"molecules-login-form","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-login-form\/01-molecules-02-drupal-login-form.html","lineageState":"inprogress"}];
+		var lineage        = [{"lineagePattern":"atoms-site-name","lineagePath":"..\/..\/patterns\/00-atoms-10-page-elements-00-site-name\/00-atoms-10-page-elements-00-site-name.html","lineageState":"inprogress"},{"lineagePattern":"molecules-login-form","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-login-form\/01-molecules-02-drupal-login-form.html","lineageState":"inprogress"}];
 		var lineageR       = [{"lineagePattern":"templates-welcome-page","lineagePath":"..\/..\/patterns\/03-templates-welcome-page\/03-templates-welcome-page.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
