--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
@@ -723,13 +723,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/josh-35-35.jpg">
+                      <img src="../../images-patternlab/cameron-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
+                    <div class="view__title"><a href="#">Rebel Mission to Ord Mantell</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
+                      Posted by <strong>Cameron Howe</strong> | September 4 at 9:04am
                     </div>
                   </div>
                 </div>
@@ -738,13 +738,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/mulder-35-35.jpg">
+                      <img src="../../images-patternlab/tyrion-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></div>
+                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Fox Mulder</strong> | March 22 at 4:45pm
+                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
                     </div>
                   </div>
                 </div>
@@ -753,13 +753,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/watson-35-35.jpg">
+                      <img src="../../images-patternlab/sherlock-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+                    <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
+                      Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
                     </div>
                   </div>
                 </div>
