--- a/public/sites/all/themes/gesso/patternlab/public/patterns/00-atoms-10-page-elements-00-site-name/00-atoms-10-page-elements-00-site-name.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/00-atoms-10-page-elements-00-site-name/00-atoms-10-page-elements-00-site-name.html
@@ -67,7 +67,7 @@
 		// handle injection of items from PHP
 		var patternPartial = "atoms-site-name";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"organisms-navigation","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-02-navigation\/02-organisms-00-regions-02-navigation.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"organisms-navigation","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-02-navigation\/02-organisms-00-regions-02-navigation.html","lineageState":"inprogress"},{"lineagePattern":"organisms-header-simple","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-04-header-simple\/02-organisms-00-regions-04-header-simple.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
