--- a/public/sites/all/themes/gesso/patternlab/public/patterns/00-atoms-10-page-elements-01-site-name-simple/00-atoms-10-page-elements-01-site-name-simple.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/00-atoms-10-page-elements-01-site-name-simple/00-atoms-10-page-elements-01-site-name-simple.html
@@ -67,7 +67,7 @@
 		// handle injection of items from PHP
 		var patternPartial = "atoms-site-name-simple";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"organisms-header-simple","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-04-header-simple\/02-organisms-00-regions-04-header-simple.html","lineageState":"inprogress"}];
+		var lineageR       = [];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
