--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions/index.html
@@ -1135,9 +1135,9 @@
 					<div id="organisms-header-simple" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.html" class="patternLink" data-patternpartial="organisms-header-simple">Header Simple</a></h2>
 						<div class="sg-pattern-body">
-							<header class="header-simple" role="banner">
+							<header class="header" role="banner">
   <div class="layout-constrain">
-    <span class="site-name site-name--simple">
+    <span class="site-name">
       <a class="site-name__link" href="#" rel="home">
         <h1 class="site-name__text">Global Innovation Exchange</h1>
       </a>
@@ -1161,15 +1161,15 @@
 							<div class="sg-code" style="display: none">
 									<div class="sg-code-contains">
 										This pattern contains: 
-											<a href="../../patterns/00-atoms-10-page-elements-01-site-name-simple/00-atoms-10-page-elements-01-site-name-simple.html"><code>atoms-site-name-simple</code></a>
+											<a href="../../patterns/00-atoms-10-page-elements-00-site-name/00-atoms-10-page-elements-00-site-name.html"><code>atoms-site-name</code></a>
 											<a href="../../patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.html"><code>molecules-login-form</code></a>
 									</div>
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
-										&lt;header class=&quot;header-simple&quot; role=&quot;banner&quot;&gt;
+										&lt;header class=&quot;header&quot; role=&quot;banner&quot;&gt;
   &lt;div class=&quot;layout-constrain&quot;&gt;
-    &lt;span class=&quot;site-name site-name--simple&quot;&gt;
+    &lt;span class=&quot;site-name&quot;&gt;
       &lt;a class=&quot;site-name__link&quot; href=&quot;#&quot; rel=&quot;home&quot;&gt;
         &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
       &lt;/a&gt;
