--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.escaped.html
@@ -1,6 +1,6 @@
-&lt;header class=&quot;header-simple&quot; role=&quot;banner&quot;&gt;
+&lt;header class=&quot;header&quot; role=&quot;banner&quot;&gt;
   &lt;div class=&quot;layout-constrain&quot;&gt;
-    &lt;span class=&quot;site-name site-name--simple&quot;&gt;
+    &lt;span class=&quot;site-name&quot;&gt;
       &lt;a class=&quot;site-name__link&quot; href=&quot;#&quot; rel=&quot;home&quot;&gt;
         &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
       &lt;/a&gt;
