--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-welcome-page/04-pages-welcome-page.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-welcome-page/04-pages-welcome-page.html
@@ -56,9 +56,9 @@
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
 <div class="page-simple__inner">
-<header class="header-simple" role="banner">
+<header class="header" role="banner">
   <div class="layout-constrain">
-    <span class="site-name site-name--simple">
+    <span class="site-name">
       <a class="site-name__link" href="#" rel="home">
         <h1 class="site-name__text">Global Innovation Exchange</h1>
       </a>
