[#45119] Update patternlab header markup to match drupal output. Styling updates for welcome page

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/00-atoms-10-page-elements/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/00-atoms-10-page-elements/index.html
@@ -104,7 +104,7 @@
 					<div id="atoms-site-name-simple" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/00-atoms-10-page-elements-01-site-name-simple/00-atoms-10-page-elements-01-site-name-simple.html" class="patternLink" data-patternpartial="atoms-site-name-simple">Site Name Simple</a></h2>
 						<div class="sg-pattern-body">
-							<span class="site-name site-name--simple">
+							<span class="site-name">
   <a class="site-name__link" href="#" rel="home">
     <h1 class="site-name__text">Global Innovation Exchange</h1>
   </a>
@@ -114,7 +114,7 @@
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
-										&lt;span class=&quot;site-name site-name--simple&quot;&gt;
+										&lt;span class=&quot;site-name&quot;&gt;
   &lt;a class=&quot;site-name__link&quot; href=&quot;#&quot; rel=&quot;home&quot;&gt;
     &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
   &lt;/a&gt;
