--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.escaped.html
@@ -1,25 +1,45 @@
 &lt;header class=&quot;header&quot; role=&quot;banner&quot;&gt;
-  &lt;div class=&quot;layout-constrain&quot;&gt;
+  &lt;div class=&quot;region-header layout-constrain&quot;&gt;
+    &lt;div class=&quot;block block--system-user-menu&quot; role=&quot;navigation&quot;&gt;
+      &lt;h2 class=&quot;element-invisible block__title&quot;&gt;Utility menu&lt;/h2&gt;
+      &lt;ul class=&quot;nav nav--utility-menu&quot;&gt;
+        &lt;li class=&quot;nav__item&quot;&gt;&lt;a class=&quot;nav__link&quot; href=&quot;#&quot;&gt;Join the Exchange&lt;/a&gt;&lt;/li&gt;
+        &lt;li class=&quot;nav__item&quot;&gt;&lt;a class=&quot;nav__link&quot; href=&quot;#&quot;&gt;Log In&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/block&gt;
+  &lt;/div&gt;
+&lt;/header&gt;
+&lt;div class=&quot;region-navigation&quot;&gt;
+  &lt;div class=&quot;region__inner&quot;&gt;
     &lt;span class=&quot;site-name&quot;&gt;
       &lt;a class=&quot;site-name__link&quot; href=&quot;#&quot; rel=&quot;home&quot;&gt;
         &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
       &lt;/a&gt;
     &lt;/span&gt;
-    &lt;div class=&quot;block block--gie-homepage-welcome-login&quot;&gt;
-      &lt;form&gt;
-        &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
-          &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;15&quot; placeholder=&quot;Username&quot;&gt;
+    &lt;div id=&quot;block-gie-homepage-welcome-login&quot; class=&quot;block  block-gie-homepage-welcome-login block--gie-homepage block--gie-homepage-welcome-login&quot;&gt;
+        &lt;form action=&quot;&quot; method=&quot;post&quot; id=&quot;user-login-form&quot; accept-charset=&quot;UTF-8&quot;&gt;
+          &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
+            &lt;label class=&quot;element-invisible&quot; for=&quot;edit-name--2&quot;&gt;Username &lt;span class=&quot;form-item__required-marker&quot;&gt;
+              &lt;span class=&quot;element-invisible&quot;&gt;This field is required.&lt;/span&gt;&lt;/span&gt;
+            &lt;/label&gt;
+            &lt;input placeholder=&quot;Username&quot; autocapitalize=&quot;off&quot; autocorrect=&quot;off&quot; id=&quot;edit-name--2&quot; name=&quot;name&quot; value=&quot;&quot; size=&quot;15&quot; maxlength=&quot;60&quot; class=&quot;form-text is-required&quot; type=&quot;text&quot;&gt;
         &lt;/div&gt;
         &lt;div class=&quot;form-item form-type-password form-item-pass&quot;&gt;
-          &lt;input type=&quot;password&quot; class=&quot;form-text is-required&quot; maxlength=&quot;128&quot; size=&quot;15&quot;placeholder=&quot;Password&quot;&gt;
+            &lt;label class=&quot;element-invisible&quot; for=&quot;edit-pass--2&quot;&gt;Password &lt;span class=&quot;form-item__required-marker&quot;&gt;
+            &lt;span class=&quot;element-invisible&quot;&gt;This field is required.&lt;/span&gt;&lt;/span&gt;
+            &lt;/label&gt;
+            &lt;input placeholder=&quot;Password&quot; autocapitalize=&quot;off&quot; autocorrect=&quot;off&quot; id=&quot;edit-pass--2&quot; name=&quot;pass&quot; size=&quot;15&quot; maxlength=&quot;128&quot; class=&quot;form-text is-required&quot; type=&quot;password&quot;&gt;
         &lt;/div&gt;
-        &lt;div id=&quot;edit-actions&quot; class=&quot;form-actions&quot;&gt;
-          &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Log in&quot; id=&quot;edit-submit--2&quot;&gt;
-        &lt;/div&gt;
-        &lt;p class=&quot;forgot-password&quot;&gt;&lt;a href=&quot;#&quot;&gt;Forgot your password?&lt;/a&gt;&lt;/p&gt;
-      &lt;/form&gt;
-    &lt;/div&gt;  &lt;/div&gt;
-&lt;/header&gt;
+            &lt;input name=&quot;form_build_id&quot; value=&quot;form-HDaNsUKqvCQinadPOzWplzRKYpILDLw8D-b5OMFW-Hc&quot; type=&quot;hidden&quot;&gt;
+          &lt;input name=&quot;form_id&quot; value=&quot;user_login_block&quot; type=&quot;hidden&quot;&gt;
+          &lt;div class=&quot;form-actions&quot; id=&quot;edit-actions--2&quot;&gt;&lt;input id=&quot;edit-submit--2&quot; name=&quot;op&quot; value=&quot;Log in&quot; class=&quot;button button--submit&quot; type=&quot;submit&quot;&gt;
+            &lt;div&gt;Forgot your &lt;a href=&quot;/user/password&quot; title=&quot;Request new password via e-mail.&quot;&gt;Password&lt;/a&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/form&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
 
 &lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot; tabindex=&quot;-1&quot;&gt;
   &lt;div class=&quot;region-content&quot;&gt;
