--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.html
@@ -61,15 +61,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/watson-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/daenerys-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Dr. John Watson, M.D.</a>  
+            <a href="#">Daenerys Targaryen</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            Did we just break in to a military base to investigate a rabbit?
+            No one will take my dragons.
           </div>
         </div>
     </article>
