--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-06-navigation-welcome-page/02-organisms-00-regions-06-navigation-welcome-page.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-06-navigation-welcome-page/02-organisms-00-regions-06-navigation-welcome-page.escaped.html
@@ -1,5 +1,5 @@
-&lt;header class=&quot;header&quot; role=&quot;banner&quot;&gt;
-  &lt;div class=&quot;layout-constrain&quot;&gt;
+&lt;div class=&quot;region-navigation&quot;&gt;
+  &lt;div class=&quot;region__inner&quot;&gt;
     &lt;span class=&quot;site-name&quot;&gt;
       &lt;a class=&quot;site-name__link&quot; href=&quot;#&quot; rel=&quot;home&quot;&gt;
         &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
@@ -28,4 +28,4 @@
         &lt;/form&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/header&gt;
+&lt;/div&gt;
