--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-06-navigation-welcome-page/02-organisms-00-regions-06-navigation-welcome-page.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-06-navigation-welcome-page/02-organisms-00-regions-06-navigation-welcome-page.html
@@ -55,19 +55,45 @@
     <div class="skiplinks">
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
-<span class="site-name">
-  <a class="site-name__link" href="#" rel="home">
-    <h1 class="site-name__text">Global Innovation Exchange</h1>
-  </a>
-</span>
+<div class="region-navigation">
+  <div class="region__inner">
+    <span class="site-name">
+      <a class="site-name__link" href="#" rel="home">
+        <h1 class="site-name__text">Global Innovation Exchange</h1>
+      </a>
+    </span>
+    <div id="block-gie-homepage-welcome-login" class="block  block-gie-homepage-welcome-login block--gie-homepage block--gie-homepage-welcome-login">
+        <form action="" method="post" id="user-login-form" accept-charset="UTF-8">
+          <div class="form-item form-type-textfield form-item-name">
+            <label class="element-invisible" for="edit-name--2">Username <span class="form-item__required-marker">
+              <span class="element-invisible">This field is required.</span></span>
+            </label>
+            <input placeholder="Username" autocapitalize="off" autocorrect="off" id="edit-name--2" name="name" value="" size="15" maxlength="60" class="form-text is-required" type="text">
+        </div>
+        <div class="form-item form-type-password form-item-pass">
+            <label class="element-invisible" for="edit-pass--2">Password <span class="form-item__required-marker">
+            <span class="element-invisible">This field is required.</span></span>
+            </label>
+            <input placeholder="Password" autocapitalize="off" autocorrect="off" id="edit-pass--2" name="pass" size="15" maxlength="128" class="form-text is-required" type="password">
+        </div>
+            <input name="form_build_id" value="form-HDaNsUKqvCQinadPOzWplzRKYpILDLw8D-b5OMFW-Hc" type="hidden">
+          <input name="form_id" value="user_login_block" type="hidden">
+          <div class="form-actions" id="edit-actions--2"><input id="edit-submit--2" name="op" value="Log in" class="button button--submit" type="submit">
+            <div>Forgot your <a href="/user/password" title="Request new password via e-mail.">Password</a>
+            </div>
+          </div>
+        </form>
+    </div>
+  </div>
+</div>
 
     <!--DO NOT REMOVE-->
     	
 	<script>
 		// handle injection of items from PHP
-		var patternPartial = "atoms-site-name-simple";
-		var lineage        = [];
-		var lineageR       = [];
+		var patternPartial = "organisms-navigation-welcome-page";
+		var lineage        = [{"lineagePattern":"atoms-site-name","lineagePath":"..\/..\/patterns\/00-atoms-10-page-elements-00-site-name\/00-atoms-10-page-elements-00-site-name.html","lineageState":"inprogress"},{"lineagePattern":"molecules-login-form","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-login-form\/01-molecules-02-drupal-login-form.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"templates-welcome-page","lineagePath":"..\/..\/patterns\/03-templates-welcome-page\/03-templates-welcome-page.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
