--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.html
@@ -581,23 +581,54 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/buttercup-58-58.jpg">
+                                <img src="../../images-patternlab/cj-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a>
+                            <a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Princess Buttercup</a> on December 28, 2015 at 8:34am</span>
+                            <span>Posted by <a href="#">C.J. Cregg</a> on August 31, 2015 at 3:42pm</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p>
+                                  <p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                    <div class="views-row">
+                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
+                        <div class="layout-slat__media">
+                          <div class="view view-content-author">
+                            <div class="views-field views-field-field-user-photo">        
+                              <div class="field-content profile-thumb__image--rounded">
+                                <img src="../../images-patternlab/scully-58-58.jpg">
+                              </div>  
+                            </div>  
+                          </div>
+                        </div>
+                        <div class="layout-slat__content">
+                          <h3 class="node__title">
+                            <a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a>
+                          </h3>
+                          <div class="node__posted-by">
+                            <span>Posted by <a href="#">Dana Scully</a> on April 13, 2015 at 10:14am</span>
+                          </div>
+                          <div class="node__summary">
+                            <div class="field field--discussion-desc">
+                              <div class="field-items">
+                                <div class="field-item even">
+                                  <p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p>
                                 </div>
                               </div>
                             </div>
@@ -643,23 +674,54 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/sherlock-58-58.jpg">
+                                <img src="../../images-patternlab/mulder-58-58.jpg">
                               </div>  
                             </div>  
                           </div>
                         </div>
                         <div class="layout-slat__content">
                           <h3 class="node__title">
-                            <a href="http://http://www.commercekitchen.com/whedon-ipsum/">You Can't Take The Sky From Me</a>
+                            <a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a>
                           </h3>
                           <div class="node__posted-by">
-                            <span>Posted by <a href="#">Sherlock Holmes</a> on January 1, 2015 at 6:20am</span>
+                            <span>Posted by <a href="#">Fox Mulder</a> on March 22, 2015 at 4:45pm</span>
                           </div>
                           <div class="node__summary">
                             <div class="field field--discussion-desc">
                               <div class="field-items">
                                 <div class="field-item even">
-                                  <p> We're gonna explode? I don't wanna explode. Boy, when they were handing out school spirit, you didn't even stand in line, did you? We will rule over all this land, and we will call it...This Land. It's about power and it's about women and you just hate those two words in the same sentence, don't you? Just once I would like to run into a cult of bunny worshippers. Put your words in word places please. </p>
+                                  <p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                    <div class="views-row">
+                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
+                        <div class="layout-slat__media">
+                          <div class="view view-content-author">
+                            <div class="views-field views-field-field-user-photo">        
+                              <div class="field-content profile-thumb__image--rounded">
+                                <img src="../../images-patternlab/inigo-58-58.jpg">
+                              </div>  
+                            </div>  
+                          </div>
+                        </div>
+                        <div class="layout-slat__content">
+                          <h3 class="node__title">
+                            <a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a>
+                          </h3>
+                          <div class="node__posted-by">
+                            <span>Posted by <a href="#">Inigo Montoya</a> on November 19, 2015 at 11:55pm</span>
+                          </div>
+                          <div class="node__summary">
+                            <div class="field field--discussion-desc">
+                              <div class="field-items">
+                                <div class="field-item even">
+                                  <p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p>
                                 </div>
                               </div>
                             </div>
@@ -736,6 +798,37 @@
                           <div class="view view-content-author">
                             <div class="views-field views-field-field-user-photo">        
                               <div class="field-content profile-thumb__image--rounded">
+                                <img src="../../images-patternlab/buttercup-58-58.jpg">
+                              </div>  
+                            </div>  
+                          </div>
+                        </div>
+                        <div class="layout-slat__content">
+                          <h3 class="node__title">
+                            <a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a>
+                          </h3>
+                          <div class="node__posted-by">
+                            <span>Posted by <a href="#">Princess Buttercup</a> on December 28, 2015 at 8:34am</span>
+                          </div>
+                          <div class="node__summary">
+                            <div class="field field--discussion-desc">
+                              <div class="field-items">
+                                <div class="field-item even">
+                                  <p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                    <div class="views-row">
+                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
+                        <div class="layout-slat__media">
+                          <div class="view view-content-author">
+                            <div class="views-field views-field-field-user-photo">        
+                              <div class="field-content profile-thumb__image--rounded">
                                 <img src="../../images-patternlab/tyrion-58-58.jpg">
                               </div>  
                             </div>  
@@ -753,99 +846,6 @@
                               <div class="field-items">
                                 <div class="field-item even">
                                   <p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-                    <div class="views-row">
-                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
-                        <div class="layout-slat__media">
-                          <div class="view view-content-author">
-                            <div class="views-field views-field-field-user-photo">        
-                              <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/mulder-58-58.jpg">
-                              </div>  
-                            </div>  
-                          </div>
-                        </div>
-                        <div class="layout-slat__content">
-                          <h3 class="node__title">
-                            <a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a>
-                          </h3>
-                          <div class="node__posted-by">
-                            <span>Posted by <a href="#">Fox Mulder</a> on March 22, 2015 at 4:45pm</span>
-                          </div>
-                          <div class="node__summary">
-                            <div class="field field--discussion-desc">
-                              <div class="field-items">
-                                <div class="field-item even">
-                                  <p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-                    <div class="views-row">
-                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
-                        <div class="layout-slat__media">
-                          <div class="view view-content-author">
-                            <div class="views-field views-field-field-user-photo">        
-                              <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/scully-58-58.jpg">
-                              </div>  
-                            </div>  
-                          </div>
-                        </div>
-                        <div class="layout-slat__content">
-                          <h3 class="node__title">
-                            <a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a>
-                          </h3>
-                          <div class="node__posted-by">
-                            <span>Posted by <a href="#">Dana Scully</a> on April 13, 2015 at 10:14am</span>
-                          </div>
-                          <div class="node__summary">
-                            <div class="field field--discussion-desc">
-                              <div class="field-items">
-                                <div class="field-item even">
-                                  <p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-                    <div class="views-row">
-                      <div class="layout-slat node node--discussion node--listing view-mode-listing">
-                        <div class="layout-slat__media">
-                          <div class="view view-content-author">
-                            <div class="views-field views-field-field-user-photo">        
-                              <div class="field-content profile-thumb__image--rounded">
-                                <img src="../../images-patternlab/daenerys-58-58.jpg">
-                              </div>  
-                            </div>  
-                          </div>
-                        </div>
-                        <div class="layout-slat__content">
-                          <h3 class="node__title">
-                            <a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a>
-                          </h3>
-                          <div class="node__posted-by">
-                            <span>Posted by <a href="#">Daenerys Targaryen</a> on May 26, 2015 at 6:37pm</span>
-                          </div>
-                          <div class="node__summary">
-                            <div class="field field--discussion-desc">
-                              <div class="field-items">
-                                <div class="field-item even">
-                                  <p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
                                 </div>
                               </div>
                             </div>
