--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-landing/03-templates-innovation-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-landing/03-templates-innovation-landing.html
@@ -576,27 +576,56 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
+                      <a href="http://web20ipsum.com"><img src="http://lorempixel.com/500/300/technics/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
                     <div class="card__content">
-                      <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
-                      <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
+                      <h3 class="card__title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
+                      <div><p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p></div>
                       <div class="card__counts">
                         <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">67</div>
+                          <div class="has-icon--evidence" title="Evidence">2</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--comment" title="Comments">344</div>
+                          <div class="has-icon--comment" title="Comments">1</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--funding" title="Funding">246</div>
+                          <div class="has-icon--funding" title="Funding">6</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">23</div>
+                          <div class="has-icon--favorite" title="Favorites">1</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">300</div>
+                          <div class="has-icon--assistance" title="Assistance">4</div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="views-row">
+                  <article class="card card--icons">
+                    <div class="card__image">
+                      <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                    </div>
+                    <div class="card__content">
+                      <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+                      <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
+                      <div class="card__counts">
+                        <div class="view">
+                          <div class="has-icon--evidence" title="Evidence">2</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--comment" title="Comments">5</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--funding" title="Funding">104</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--favorite" title="Favorites">3</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--assistance" title="Assistance">305</div>
                         </div>
                       </div>
                     </div>
@@ -634,27 +663,56 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
-                      <a href="http://http://www.commercekitchen.com/whedon-ipsum/"><img src="http://lorempixel.com/500/300/animals/3/" alt="Card 5:3" height="300" width="500">
+                      <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
                     <div class="card__content">
-                      <h3 class="card__title"><a href="http://http://www.commercekitchen.com/whedon-ipsum/">You Can't Take The Sky From Me</a></h3>
-                      <div><p> We're gonna explode? I don't wanna explode. Boy, when they were handing out school spirit, you didn't even stand in line, did you? We will rule over all this land, and we will call it...This Land. It's about power and it's about women and you just hate those two words in the same sentence, don't you? Just once I would like to run into a cult of bunny worshippers. Put your words in word places please. </p></div>
+                      <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                      <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
+                      <div class="card__counts">
+                        <div class="view">
+                          <div class="has-icon--evidence" title="Evidence">52</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--comment" title="Comments">0</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--funding" title="Funding">2</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--favorite" title="Favorites">0</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--assistance" title="Assistance">1</div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="views-row">
+                  <article class="card card--icons">
+                    <div class="card__image">
+                      <a href="http://cupcakeipsum.com/"><img src="http://lorempixel.com/500/300/nightlife/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                    </div>
+                    <div class="card__content">
+                      <h3 class="card__title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
+                      <div><p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p></div>
                       <div class="card__counts">
                         <div class="view">
                           <div class="has-icon--evidence" title="Evidence">2</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--comment" title="Comments">1</div>
+                          <div class="has-icon--comment" title="Comments">17</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--funding" title="Funding">4500</div>
+                          <div class="has-icon--funding" title="Funding">45</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">10</div>
+                          <div class="has-icon--favorite" title="Favorites">65</div>
                         </div>
                         <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">4</div>
+                          <div class="has-icon--assistance" title="Assistance">9</div>
                         </div>
                       </div>
                     </div>
@@ -721,6 +779,35 @@
                 <div class="views-row">
                   <article class="card card--icons">
                     <div class="card__image">
+                      <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
+</a>
+                    </div>
+                    <div class="card__content">
+                      <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                      <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
+                      <div class="card__counts">
+                        <div class="view">
+                          <div class="has-icon--evidence" title="Evidence">67</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--comment" title="Comments">344</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--funding" title="Funding">246</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--favorite" title="Favorites">23</div>
+                        </div>
+                        <div class="view">
+                          <div class="has-icon--assistance" title="Assistance">300</div>
+                        </div>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="views-row">
+                  <article class="card card--icons">
+                    <div class="card__image">
                       <a href="http://www.malevole.com/mv/misc/text/"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
 </a>
                     </div>
@@ -742,93 +829,6 @@
                         </div>
                         <div class="view">
                           <div class="has-icon--assistance" title="Assistance">899</div>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-                <div class="views-row">
-                  <article class="card card--icons">
-                    <div class="card__image">
-                      <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                    </div>
-                    <div class="card__content">
-                      <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
-                      <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
-                      <div class="card__counts">
-                        <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">52</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--comment" title="Comments">0</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--funding" title="Funding">2</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">0</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">1</div>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-                <div class="views-row">
-                  <article class="card card--icons">
-                    <div class="card__image">
-                      <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                    </div>
-                    <div class="card__content">
-                      <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
-                      <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
-                      <div class="card__counts">
-                        <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">2</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--comment" title="Comments">5</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--funding" title="Funding">104</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">3</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">305</div>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-                <div class="views-row">
-                  <article class="card card--icons">
-                    <div class="card__image">
-                      <a href="http://www.niemanlab.org/journo-ipsum/"><img src="http://lorempixel.com/500/300/nature/3/" alt="Card 5:3" height="300" width="500">
-</a>
-                    </div>
-                    <div class="card__content">
-                      <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
-                      <div><p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p></div>
-                      <div class="card__counts">
-                        <div class="view">
-                          <div class="has-icon--evidence" title="Evidence">5</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--comment" title="Comments">23</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--funding" title="Funding">67</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--favorite" title="Favorites">100</div>
-                        </div>
-                        <div class="view">
-                          <div class="has-icon--assistance" title="Assistance">65</div>
                         </div>
                       </div>
                     </div>
