--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
@@ -723,13 +723,28 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/cameron-35-35.jpg">
+                      <img src="../../images-patternlab/sherlock-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Rebel Mission to Ord Mantell</a></div>
+                    <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Cameron Howe</strong> | September 4 at 9:04am
+                      Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
+                      <img src="../../images-patternlab/cj-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
                     </div>
                   </div>
                 </div>
@@ -745,21 +760,6 @@
                     <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
                     <div class="view__meta">
                       Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
-                      <img src="../../images-patternlab/sherlock-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
                     </div>
                   </div>
                 </div>
