--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.html
@@ -56,27 +56,47 @@
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
 <header class="header" role="banner">
-  <div class="layout-constrain">
+  <div class="region-header layout-constrain">
+    <div class="block block--system-user-menu" role="navigation">
+      <h2 class="element-invisible block__title">Utility menu</h2>
+      <ul class="nav nav--utility-menu">
+        <li class="nav__item"><a class="nav__link" href="#">Join the Exchange</a></li>
+        <li class="nav__item"><a class="nav__link" href="#">Log In</a></li>
+      </ul>
+    </block>
+  </div>
+</header>
+<div class="region-navigation">
+  <div class="region__inner">
     <span class="site-name">
       <a class="site-name__link" href="#" rel="home">
         <h1 class="site-name__text">Global Innovation Exchange</h1>
       </a>
     </span>
-    <div class="block block--gie-homepage-welcome-login">
-      <form>
-        <div class="form-item form-type-textfield form-item-name">
-          <input type="text" class="form-text is-required" maxlength="60" size="15" placeholder="Username">
+    <div id="block-gie-homepage-welcome-login" class="block  block-gie-homepage-welcome-login block--gie-homepage block--gie-homepage-welcome-login">
+        <form action="" method="post" id="user-login-form" accept-charset="UTF-8">
+          <div class="form-item form-type-textfield form-item-name">
+            <label class="element-invisible" for="edit-name--2">Username <span class="form-item__required-marker">
+              <span class="element-invisible">This field is required.</span></span>
+            </label>
+            <input placeholder="Username" autocapitalize="off" autocorrect="off" id="edit-name--2" name="name" value="" size="15" maxlength="60" class="form-text is-required" type="text">
         </div>
         <div class="form-item form-type-password form-item-pass">
-          <input type="password" class="form-text is-required" maxlength="128" size="15"placeholder="Password">
+            <label class="element-invisible" for="edit-pass--2">Password <span class="form-item__required-marker">
+            <span class="element-invisible">This field is required.</span></span>
+            </label>
+            <input placeholder="Password" autocapitalize="off" autocorrect="off" id="edit-pass--2" name="pass" size="15" maxlength="128" class="form-text is-required" type="password">
         </div>
-        <div id="edit-actions" class="form-actions">
-          <input type="submit" class="button button--submit" value="Log in" id="edit-submit--2">
-        </div>
-        <p class="forgot-password"><a href="#">Forgot your password?</a></p>
-      </form>
-    </div>  </div>
-</header>
+            <input name="form_build_id" value="form-HDaNsUKqvCQinadPOzWplzRKYpILDLw8D-b5OMFW-Hc" type="hidden">
+          <input name="form_id" value="user_login_block" type="hidden">
+          <div class="form-actions" id="edit-actions--2"><input id="edit-submit--2" name="op" value="Log in" class="button button--submit" type="submit">
+            <div>Forgot your <a href="/user/password" title="Request new password via e-mail.">Password</a>
+            </div>
+          </div>
+        </form>
+    </div>
+  </div>
+</div>
 
 <main id="main" class="main" role="main" tabindex="-1">
   <div class="region-content">
@@ -221,7 +241,7 @@
 	<script>
 		// handle injection of items from PHP
 		var patternPartial = "templates-welcome-page";
-		var lineage        = [{"lineagePattern":"organisms-header-simple","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-04-header-simple\/02-organisms-00-regions-04-header-simple.html","lineageState":"inprogress"},{"lineagePattern":"organisms-welcome-page","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-welcome-page\/02-organisms-01-content-types-welcome-page.html","lineageState":"inprogress"},{"lineagePattern":"organisms-footer-simple","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-05-footer-simple\/02-organisms-00-regions-05-footer-simple.html","lineageState":"inprogress"}];
+		var lineage        = [{"lineagePattern":"organisms-header","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-01-header\/02-organisms-00-regions-01-header.html","lineageState":"inprogress"},{"lineagePattern":"organisms-navigation-welcome-page","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-06-navigation-welcome-page\/02-organisms-00-regions-06-navigation-welcome-page.html","lineageState":"inprogress"},{"lineagePattern":"organisms-welcome-page","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-welcome-page\/02-organisms-01-content-types-welcome-page.html","lineageState":"inprogress"},{"lineagePattern":"organisms-footer-simple","lineagePath":"..\/..\/patterns\/02-organisms-00-regions-05-footer-simple\/02-organisms-00-regions-05-footer-simple.html","lineageState":"inprogress"}];
 		var lineageR       = [{"lineagePattern":"pages-welcome-page","lineagePath":"..\/..\/patterns\/04-pages-welcome-page\/04-pages-welcome-page.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
