[#45119] Update markup and styling for welcome page.

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
@@ -272,13 +272,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/sherlock-35-35.jpg">
+                      <img src="../../images-patternlab/daenerys-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
+                    <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
+                      Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
                     </div>
                   </div>
                 </div>
@@ -287,13 +287,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/cj-35-35.jpg">
+                      <img src="../../images-patternlab/gordon-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+                    <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
                     <div class="view__meta">
-                      Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                      Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
                     </div>
                   </div>
                 </div>
@@ -302,13 +302,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/tyrion-35-35.jpg">
+                      <img src="../../images-patternlab/cameron-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
+                    <div class="view__title"><a href="#">Rebel Mission to Ord Mantell</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
+                      Posted by <strong>Cameron Howe</strong> | September 4 at 9:04am
                     </div>
                   </div>
                 </div>
