--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.escaped.html
@@ -571,15 +571,15 @@
             &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
                 &lt;div class=&quot;layout-slat__media&quot;&gt; 
                   &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/sherlock-78-78.jpg&quot;&gt;&lt;/a&gt;
+                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/inigo-78-78.jpg&quot;&gt;&lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;profile-thumb__name&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;  
+                    &lt;a href=&quot;#&quot;&gt;Inigo Montoya&lt;/a&gt;  
                   &lt;/div&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;layout-slat__content&quot;&gt;
                   &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-                    How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
+                    Hello. My name is Inigo Montoya. You killed my father. Prepare to die.
                   &lt;/div&gt;
                 &lt;/div&gt;
             &lt;/article&gt;
